# dax_apdb

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  COPYRIGHT  README.md  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  mypy.yaml
bin.src/: apdb-cli
cfg/: ppdb-sqlite.py
config/: apdb-cassandra.py  apdb-mysql.py  apdb-pg.py  apdb-sqlite.py  ppdb-mysql.py  ppdb-pg.py
data/: apdb-afw-map.yaml  apdb-schema-cassandra-per-month.yaml  apdb-schema-cassandra.yaml  apdb-schema-extra-cassandra.yaml  apdb-schema-extra-oracle.yaml  apdb-schema-extra.yaml  apdb-schema.yaml  ppdb-afw-map.yaml  ppdb-schema-extra-oracle.yaml  ppdb-schema-extra.yaml  ppdb-schema.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.dax.apdb/: index.rst
doc/lsst.dax.ppdb/: index.rst
python/lsst/: __init__.py
python/lsst/dax/: __init__.py
python/lsst/dax/apdb/: __init__.py  _auth.py  apdb.py  apdbAdmin.py  apdbBaseSchema.py  apdbCassandra.py  apdbCassandraReplica.py  apdbCassandraSchema.py  apdbConfigFreezer.py  apdbIndex.py  apdbMetadata.py  apdbMetadataCassandra.py  apdbMetadataSql.py  apdbReplica.py  apdbSchema.py  apdbSql.py  apdbSqlReplica.py  apdbSqlSchema.py  apdbUpdateRecord.py  cassandra_utils.py  config.py  factory.py  legacy_config.py  monitor.py  pixelization.py  recordIds.py  schema_model.py  timer.py  versionTuple.py
python/lsst/dax/apdb/cassandra/: __init__.py  apdbCassandra.py  apdbCassandraAdmin.py  apdbCassandraReplica.py  apdbCassandraSchema.py  apdbMetadataCassandra.py  cassandra_utils.py  config.py  connectionContext.py  exceptions.py  legacy_config.py  partitioner.py  queries.py  sessionFactory.py
python/lsst/dax/apdb/cli/: apdb_cli.py  cli.py  config_options.py  logging_cli.py  options.py
python/lsst/dax/apdb/scripts/: __init__.py  convert_legacy_config.py  create_cassandra.py  create_sql.py  delete_cassandra.py  list_cassandra.py  list_index.py  metadata.py  metrics.py  partition.py  replication.py
python/lsst/dax/apdb/sql/: __init__.py  apdbMetadataSql.py  apdbSql.py  apdbSqlAdmin.py  apdbSqlReplica.py  apdbSqlSchema.py  config.py  legacy_config.py  modelToSql.py
python/lsst/dax/apdb/tests/: __init__.py  _apdb.py  _apdb_admin.py  cassandra_mixin.py  data_factory.py  utils.py
python/lsst/dax/ppdb/: __init__.py  ap_verify_queries.py  l1db.py  l1dbschema.py  ppdb.py  ppdbBaseSchema.py  ppdbCassandra.py  ppdbCassandraSchema.py  ppdbSchema.py  ppdbSqlSchema.py  timer.py
tests/: log_config.ini  test_ap_verify_queries.py  test_apdb.py  test_apdbCassandra.py  test_apdbCassandraAdmin.py  test_apdbSchema.py  test_apdbSql.py  test_apdbSqlSchema.py  test_cassandraPartitioner.py  test_cassandra_queries.py  test_cli.py  test_index.py  test_l1db.py  test_l1dbschema.py  test_legacy_config.py  test_monitor.py  test_ppdb.py  test_ppdbSchema.py  test_updateRecord.py
tests/config/: schema-apdb+sso.yaml  schema-apdb.yaml  schema-datetime.yaml  schema-sso.yaml  schema.yaml
ups/: dax_apdb.table
